@@ -750,6 +750,10 @@ class TestUpstreamVersionAddRevision(TestCaseWithTransport):
             "1.3+git20180101.e7f47cf",
             upstream_version_add_revision(
                 self, "1.3", b"somegitrev"))
+        self.assertEquals(
+            "1.0~git20180101",
+            upstream_version_add_revision(
+                self, "1.0~git20160320", b"somegitrev"))
 
 
 class GetExportUpstreamRevisionTests(TestCase):
